Update email address in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,7 @@ author:
   location         : "Paris, France"
   employer         : "PSL University"
   uri              : # URL
-  email            : - "jiwei11wang@gmail.com"
-                     - "jiwei.wang@etu.chimieparistech.psl.eu"
+  email            : "jiwei11wang@gmail.com"
 
   # Academic websites
   academia         : # URL
