--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "王继苇 Jiwei Wang"
 title_separator          : "-"
 name                     : &name "王继苇 Jiwei Wang"
 #description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://jiwei11wang.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : "https://jiwei11wang.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jiwei11wang/jiwei11wang.github.io"
